log.txt
   Compiling proc-macro2 v1.0.101
   Compiling unicode-ident v1.0.18
   Compiling libc v0.2.175
   Compiling getrandom v0.3.3
   Compiling serde v1.0.219
   Compiling cfg-if v1.0.3
   Compiling rustix v1.0.8
   Compiling bitflags v2.9.4
   Compiling crc-catalog v2.4.0
   Compiling linux-raw-sys v0.9.4
   Compiling serde_json v1.0.143
   Compiling quote v1.0.40
   Compiling syn v2.0.106
   Compiling log v0.4.28
   Compiling anyhow v1.0.99
   Compiling llvm-tools v0.1.1
   Compiling uuid v1.18.1
   Compiling bootloader v0.11.12
   Compiling crc v3.3.0
   Compiling once_cell v1.21.3
   Compiling fastrand v2.3.0
   Compiling bitflags v1.3.2
   Compiling memchr v2.7.5
   Compiling itoa v1.0.15
   Compiling byteorder v1.5.0
   Compiling ryu v1.0.20
   Compiling fatfs v0.3.6
   Compiling gpt v3.1.0
   Compiling tempfile v3.21.0
   Compiling kernel v0.1.0 (/home/canadiangamer/programs/rust/emos/kernel)
   Compiling ovmf-prebuilt v0.1.0-alpha.1
error[E0463]: can't find crate for `std`
  |
  = note: the `x86_64-unknown-none` target may not support the standard library
  = note: `std` is required by `ovmf_prebuilt` because it does not declare `#![no_std]`
  = help: consider building the standard library from source with `cargo build -Zbuild-std`

error: cannot resolve a prelude import

error[E0463]: can't find crate for `std`
 --> /home/canadiangamer/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/ovmf-prebuilt-0.1.0-alpha.1/src/lib.rs:1:5
  |
1 | use std::path::{PathBuf, Path};
  |     ^^^ can't find crate
  |
  = note: the `x86_64-unknown-none` target may not support the standard library
  = help: consider building the standard library from source with `cargo build -Zbuild-std`

error: cannot find macro `assert` in this scope
 --> /home/canadiangamer/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/ovmf-prebuilt-0.1.0-alpha.1/src/lib.rs:5:5
  |
5 |     assert!(path.exists(), "OVMF-pure-efi.fd does not exist");
  |     ^^^^^^
  |
help: consider importing this macro
  |
1 + use core::assert;
  |

error: cannot find macro `env` in this scope
 --> /home/canadiangamer/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/ovmf-prebuilt-0.1.0-alpha.1/src/lib.rs:4:26
  |
4 |     let path = Path::new(env!("CARGO_MANIFEST_DIR")).join("OVMF-pure-efi.fd");
  |                          ^^^
  |
help: consider importing this macro
  |
1 + use core::env;
  |

For more information about this error, try `rustc --explain E0463`.
error: could not compile `ovmf-prebuilt` (lib) due to 5 previous errors
warning: build failed, waiting for other jobs to finish...
